installation tailwind, création de la page accueil avec affichage des personnages, mise à jour du fichier index.css, création du header

--- a/front-end_gamepad/index.html
+++ b/front-end_gamepad/index.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Game Pad</title>
+    <link rel="stylesheet" href="./dist/output.css" />
+    <title>Gamepad</title>
   </head>
   <body>
-    <div id="root"></div>
+    <div id="root" style="background-color: black"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
